# webjango

./: .pre-commit-config.yaml  README.md  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: ci.yml
polls/: urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/: page.html
raz_webjango/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_users.py
